navbar.css
  .navbar {
    top: 0;
    position: sticky;
    border-bottom: 1px groove;
    overflow: hidden;
    display: block;
    width: 100%;
    height: 60px;
    background-size: cover;
    background-repeat: repeat;
    background-color: #fffafa;
  }

  .nav-name a {
    margin-left: 5%;
    font-weight: 600;
    float: left !important;
  }
  
  .navbar a {
    float: right;
    display: block;
    color: #000000;
    padding: 20px 25px 30px;
    text-decoration: none;
    font-size: 0.75em;
  }
  
  .navbar a:hover {
    color: #ad1d09;
  }
  
  .navbar a.active {
    color: #008b8b;
  }

  .navbar a.active:hover {
    color: #008b8b;
  }
  
  .navbar .icon {
    display: none;
  }
  
  @media screen and (max-width: 700px) {
    .navbar a {
      display: none;
    }

    .navbar a.icon {
      float: right;
      display: block;
    }
  }
  
  @media screen and (max-width: 700px) {
    .navbar.responsive 
    {
      position: relative;
    }

    .navbar.responsive .icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .navbar.responsive a {
      float: none;
      display: block;
      text-align: center;
    }
  }

  /* OVERLAY NAV */ 

  .overlay {
    height: 0%;
    width: 100%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #DFDBE5;
    overflow-y: hidden;
    transition: 0.5s;
  }
  
  .overlay-content {
    position: relative;
    top: 15%;
    width: 100%;
    text-align: center;
    margin-top: 30px;
  }
  
  .overlay a {
    padding: 30px;
    text-decoration: none;
    font-size: 36px;
    color: #000000;
    display: block;
    transition: 0.3s;
  }
  
  .overlay a:hover, .overlay a:focus {
    color: #f1f1f1;
  }

  .overlay .active {
    color: darkcyan;
  }
  
  .overlay .closebtn {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 60px;
  }
  
  @media screen and (max-height: 450px) {
    .overlay {
      overflow-y: auto;
    }

    .overlay a {
      font-size: 30px
    }
    
    .overlay .closebtn {
    font-size: 40px;
    top: 15px;
    right: 35px;
    float: right;
    }
  }

